@@ -1,3 +1,10 @@
+2012-11-18  Dan Bernstein  <mitz@apple.com>
+
+        Try to fix the DFG build after r135099.
+
+        * dfg/DFGCommon.h:
+        (JSC::DFG::shouldShowDisassembly):
+
 2012-11-18  Filip Pizlo  <fpizlo@apple.com>
 
         Unreviewed, build fix for !ENABLE(DFG_JIT).
